*pyroute2-0.3.1 (21 Oct 2014)

  21 Oct 2014; Michael Weber <xmw@gentoo.org> +metadata.xml,
  +pyroute2-0.3.1.ebuild:
  Initial import